2002-06-15  Alexander Malmberg <alexander@malmberg.org>

	* configure.ac, configure: Use libart2-config and freetype-config
	to get libs and cflags for libart and freetype. Updated configure.
	* Source/gsc/GSGState.m (-DPSinitgraphics): Set alpha _before_
	calling -setColor:state:.

2002-06-10  Adam Fedor  <fedor@gnu.org>

	* Version 0.7.8


2002-06-09  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Set WIN32 and WINLIB only on mingw32 systems.

2002-06-08  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/winlib/WIN32FontInfo.h
	Added ivar for font handle.
	* Source/winlib/WIN32FontInfo.m
	Implemented most of the code to support different fonts.
	
2002-06-08  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m
	Coorected [DPSrectfill::::], [DPSrectstroke::::] and 
	[DPSrectclip::::] not to change the path. 
	* Source/winlib/WIN32GState.m
	[DPSrectstroke::::] same correction.

2002-06-04  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m
	Added default implementation for [DPSrectfill::::], 
	[DPSrectstroke::::] and [DPSrectclip::::].
	* Header/winlib/WIN32GState.h
	Added ivar to store old clip region.
	* Source/winlib/WIN32GState.m
	[_paintPath:], [DPSrectclip::::], [DPSinitclip], [setStyle:]  
	and [restoreStyle:]: Rewrote the whole clipping code.
	Added [deepen] and [dealloc] for consistency.
	Simplified [DPSrectstroke::::].
	
2002-06-03  Adam Fedor  <fedor@gnu.org>

	* Source/win32/WIN32Server.m (-beep): Implement
	* Source/winlib/WIN32Context.m (-NSBeep): Remove.

	* Source/x11/XGServer.m (-beep): Implement.
	* Source/xlib/XGContext.m (-NSBeep): Remove.

2002-06-02  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m
	Treat NSBackingStoreRetained the same as NSBackingStoreBuffered, 
	just as the X backends do. 
	* Source/winlib/WIN32GState.m
	Reimplemented creation of bitmaps. This should now work for all 
	bitmaps with >16 bits per pixel. The bitmaps that are still missing 