@@ -1,3 +1,8 @@
+2002-06-20  Adam Fedor  <fedor@gnu.org>
+
+	* Source/x11/XGServer.m (_parse_display_name): New.
+	([XGServer -_initXContext]): Use it.
+
 2002-06-15  Alexander Malmberg <alexander@malmberg.org>
 
 	* configure.ac, configure: Use libart2-config and freetype-config
